Düzeltme yapıldı.