@@ -12,8 +12,9 @@ public class Uye implements IUye{
     private String soyad ;
     private String telNo;
     List<Kitap> oduncKitaplar = new ArrayList<>();
-    Scanner scanner = new Scanner(System.in);
-    Kutuphane kutuphane = new Kutuphane();
+    static Scanner scanner = new Scanner(System.in);
+
+
 
     public Uye(Long uyeNo, String ad, String soyad, String telNo) {
         this.uyeNo=uyeNo;
@@ -63,6 +64,7 @@ public class Uye implements IUye{
         this.oduncKitaplar = oduncKitaplar;
     }
 
+
     @Override
     public String toString() {
         final StringBuilder sb = new StringBuilder("Uye{");
@@ -75,55 +77,60 @@ public class Uye implements IUye{
         return sb.toString();
     }
 
-    @Override
-    public void oduncAl() {
-       List <Kitap> kitaplar = kutuphane.kitaplariListele();
-        List<Kitap> oduncVerilebilirListesi = kitaplar.stream().filter(x -> x.getDurum().equals(EDurum.ODUNC_ALABILIR)).collect(Collectors.toList());
+
+
+    public static void oduncAl() {
+        List <Kitap> kitaplar = Kutuphane.getKitaplar();
+        List<Kitap> oduncVerilebilirListesi = kitaplar.stream().filter(x -> x.getDurum().equals(EDurum.ODUNC_ALABILIR)).toList();
 
         try {
             System.out.println("Ödünç Almak İstediğiniz Kitabının Adını Giriniz");
             String kitapAd = scanner.nextLine();
 
-            Optional<Kitap>  oduncVerilecekKitap = oduncVerilebilirListesi.stream().filter(x -> x.getId().equals(kitapAd)).findFirst();
+            Optional<Kitap>  oduncVerilecekKitap = oduncVerilebilirListesi.stream().filter(x -> x.getBaslik().equals(kitapAd)).findFirst();
             oduncVerilecekKitap.get().setDurum(EDurum.ODUNC_VERILDI);
 
-            List<Uye> uyeler = kutuphane.uyeleriListele();
+            System.out.println(" Uye Numarınızı Giriniz");
+            Long uyeNo = scanner.nextLong();
+
+            List<Uye> uyeler = Kutuphane.getUyeler();
             Uye uye = uyeler.stream().filter(x->x.getUyeNo().equals(uyeNo)).findFirst().get();
             uye.getOduncKitaplar().add(oduncVerilecekKitap.get());
 
             System.out.println(oduncVerilecekKitap.get().getBaslik()+ " adlı kitap ödünç alındı.");
-            kutuphane.durumuGuncelle();
         }catch(Exception e){
             System.out.println("Adı girilen kitap uygun değildir.");
         }
 
-
-
     }
 
-    @Override
-    public void iadeEt() {
-        List <Kitap> kitaplar = kutuphane.kitaplariListele();
+
+
+
+    public static void iadeEt() {
+        List <Kitap> kitaplar = Kutuphane.getKitaplar();
         System.out.println("İade edilecek olan kitabın adını giriniz");
         String kitapAdi = scanner.nextLine();
+        System.out.println("Uye numaranızı giriniz");
+        Long uyeNo = scanner.nextLong();
 
-        Kitap iadeKitap = kitaplar.stream().filter(x->x.getId().equals(kitapAdi)).findAny().get();
+        Kitap iadeKitap = kitaplar.stream().filter(x->x.getBaslik().equals(kitapAdi)).findAny().get();
         iadeKitap.setDurum(EDurum.ODUNC_ALABILIR);
 
-        List<Uye> uyeler = kutuphane.uyeleriListele();
+        List<Uye> uyeler = Kutuphane.getUyeler();
         Uye uye = uyeler.stream().filter(x->x.getUyeNo().equals(uyeNo)).findAny().get();
         uye.getOduncKitaplar().remove(iadeKitap);
         System.out.println(iadeKitap.getBaslik()+" adlı kitap iade edildi.");
-        kutuphane.durumuGuncelle();
 
     }
-    public void uyeApp(){
+
+    public static void uyeApp(){
         int secim;
         do {
             secim = uyeMenu();
             switch (secim) {
                 case 1:
-                    kutuphane.kitaplariListele();
+                    Kutuphane.getKitaplar().stream().filter(x->x.getDurum().equals(EDurum.ODUNC_ALABILIR)).forEach(x->System.out.println(x.getId() + " " + x.getBaslik()));
                     break;
                 case 2:
                     oduncAl();
@@ -142,19 +149,20 @@ public class Uye implements IUye{
 
     }
 
-    private void uyeGirisi() {
+    public static void uyeGirisi() {
         System.out.println("Üye numaranızı giriniz");
         Long uyeNo = scanner.nextLong();
-        List<Uye> uyeler = kutuphane.uyeleriListele();
+        List<Uye> uyeler = Kutuphane.getUyeler();
         Optional<Uye> uye = uyeler.stream().filter(x->x.getUyeNo().equals(uyeNo)).findAny();
-        if(uye.isEmpty())
+        if(uye.isPresent()){
+            System.out.println("Hoşgeldin "+uye.get().getAd());
+            uyeApp();
+        }else
             System.out.println("Üye numarasını tekrar giriniz.");
-        System.out.println("Hoşgeldin "+uye.get().getAd());
-        uyeMenu();
-
     }
 
-    public int uyeMenu(){ //üyenin kullandığı sistem
+
+    public static int uyeMenu(){ //üyenin kullandığı sistem
         System.out.println("--- Kutuphane Üye Arayüzüne Hosgeldiniz ---");
         System.out.println("Lütfen Yapmak İstediğiniz İşlemi Seçiniz");
         System.out.println("""
@@ -167,5 +175,6 @@ public class Uye implements IUye{
         scanner.nextLine();
         return secim;
     }
+
 
 }
